Edited wiki page through web user interface.

--- a/wiki/Teapoy.wiki
+++ b/wiki/Teapoy.wiki
@@ -1,8 +1,12 @@
-#summary One-sentence summary of this page.
+#summary 茶具项目Wiki首页
 
-= Introduction =
+= 快速导航 =
 
-Add your content here.
+TeapoyTarget001
+
+测试
+
+测试
 
 
 = Details =
