Edited wiki page through web user interface.

--- a/wiki/TeapoyTab.wiki
+++ b/wiki/TeapoyTab.wiki
@@ -1,7 +1,7 @@
 #summary Teapoy Wiki 侧边栏
 
 * [Teapoy 关于Teapoy]
-* 项目目标
+* [TeapoyTarget 项目目标]
  * [TeapoyTarget001 0.1版本项目目标]
  * [TeapoyTarget002 0.2版本项目目标]
  * [TeapoyTarget003 0.3版本项目目标]
